Refixing alignment issue

--- a/themes/bc/static/css/refresh.css
+++ b/themes/bc/static/css/refresh.css
@@ -268,6 +268,9 @@ body {
     font-size: 20px;
 }
 
+#search-panel button.btn.btn-default {
+    margin-top: -1px;
+}
 
 .homepagerefresh #db-rg-hours {
 }
